# tokenization-layer

./: CONTRIBUTING.md  LICENSE  README.md  README.tex.md  concept-explained.html  concept-explained.ipynb  requirements.txt  train_imdb.py
.github/workflows/: deploy_package.yml
pip_package/: README.md  setup.cfg
pip_package/src/tokenization_layer/: __init__.py  general.py  layers.py  pattern_initializers.py  util_functions.py
pip_package/src/tokenization_layer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
