[metadata]
name = tokenization-layer
version = 0.0.2
author = Martin Molnar
author_email = martin.molnar07@gmail.com
description = An NLP tokenization algorithm that is a trainable layer for neural networks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martinm07/tokenization-layer
project_urls =
    Package Documentation = https://martin-github07.gitbook.io/tokenization-layer/
    Bug Tracker = https://github.com/martinm07/tokenization-layer/issues
    Project Discussion = https://github.com/martinm07/tokenization-layer/discussions
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = natural-language-processing, research, neural-networks, tokenization, tensorflow2

[options]
package_dir =
    = src
packages = find:
install_requires =
    tensorflow >= 2.0.0
    numpy >= 1.15.0
    pandas >= 1.0
    colorama
python_requires = >=3.6

[options.packages.find]
where = src